force-app/main/default/objects/SPA_Request_Line_Item__c/SPA_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <label>SPA Request Line Item</label>
    <nameField>
        <displayFormat>LIN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPA Request Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>