force-app/main/default/objects/SPA_Request_Line_Item__c/fields/AME_Indicator__c.field-meta.xml
<CustomField>
    <fullName>AME_Indicator__c</fullName>
    <description>Add, Modify, Expire Indicator, Making it restricted as per SASER-10336</description>
    <label>AME Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>Add</fullName>
                <isActive>false</isActive>
                <label>Add</label>
            </value>
            <value>
                <fullName>Expire</fullName>
                <isActive>false</isActive>
                <label>Expire</label>
            </value>
            <value>
                <fullName>Modify</fullName>
                <isActive>false</isActive>
                <label>Modify</label>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>