force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ApprovalDatesandFirmStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDatesandFirmStatus__c</fullName>
    <label>Approval Dates and Firm Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>