force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ApprovalDatesFirmStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDatesFirmStatus__c</fullName>
    <description>Workflow field which is utilized when a request is made to change Benefit Effective and/or Expiration Dates and/or contains a Firm indicator as True</description>
    <label>Approval Dates and Firm Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Authorization</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>