force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ApprovalDatesRequireAuth__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDatesRequireAuth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System Maintain value that is used to determine if Price Authorization is required.  Aides in approval retention</description>
    <label>Approval Dates Require Auth</label>
    <type>Checkbox</type>
</CustomField>