force-app/main/default/objects/SPA_Request_Line_Item__c/fields/AuthorizationCode__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationCode__c</fullName>
    <description>Authorization Code for Product which determines restrictions</description>
    <label>Authorization Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>