force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Authorized_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Effective_Date__c</fullName>
    <label>Authorized Effective Date</label>
    <type>Date</type>
</CustomField>