force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Authorized_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Expiration_Date__c</fullName>
    <label>Authorized Expiration Date</label>
    <type>Date</type>
</CustomField>