force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Authorized_Multiplier_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Multiplier_Rebate__c</fullName>
    <label>Authorized Multiplier Rebate</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>