force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Authorized_Net_Price_Rebate_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Net_Price_Rebate_Number__c</fullName>
    <label>Authorized Net Price Rebate Number</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>