force-app/main/default/objects/SPA_Request_Line_Item__c/fields/BookMultiplier__c.field-meta.xml
<CustomField>
    <fullName>BookMultiplier__c</fullName>
    <label>Book Multiplier</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>