force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Catalog_Number__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalog Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SPA Request Line Item</relationshipLabel>
    <relationshipName>CatalogNumberSPARequestLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>