force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ChangeInBenefitLevels__c.field-meta.xml
<CustomField>
    <fullName>ChangeInBenefitLevels__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if price level has changed from agreement level on acknowledgement</description>
    <label>Change in Benefit Levels</label>
    <type>Checkbox</type>
</CustomField>