force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ChangeInBenefits__c.field-meta.xml
<CustomField>
    <fullName>ChangeInBenefits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check whether user has requested for change in prices for the products on the spa request</description>
    <label>Change In Benefits</label>
    <type>Checkbox</type>
</CustomField>