force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Created_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Id__c</fullName>
    <label>Created By Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>