force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Currency_Iso_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Iso_Code__c</fullName>
    <label>Currency Iso Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>