force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Designator__c.field-meta.xml
<CustomField>
    <fullName>Designator__c</fullName>
    <label>Designator</label>
    <length>5</length>
    <type>Text</type>
</CustomField>