force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ExistingAgreementMultiplierRebate__c.field-meta.xml
<CustomField>
    <fullName>ExistingAgreementMultiplierRebate__c</fullName>
    <description>Existing Agreement Multiplier Rebate (Discount and PDCat Level)</description>
    <label>Existing Agreement Multiplier Rebate</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>