force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ExistingAgreementNetPriceRebate__c.field-meta.xml
<CustomField>
    <fullName>ExistingAgreementNetPriceRebate__c</fullName>
    <description>Existing Agreement Net Unit Price Rebate (Item Level)</description>
    <label>Existing Agreement Net Price Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>