force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ExistingAgreementSource__c.field-meta.xml
<CustomField>
    <fullName>ExistingAgreementSource__c</fullName>
    <description>Source of Price Level (Item, Category, Discount Schedule)</description>
    <label>Existing Agreement Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>