force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ExpectedImpact__c.field-meta.xml
<CustomField>
    <fullName>ExpectedImpact__c</fullName>
    <description>Twelve Month Expected Sales Increase if Price Increase is taken without any adjustments.</description>
    <label>Expected Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>