force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Firm_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Firm_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firm Indicator</label>
    <type>Checkbox</type>
</CustomField>