force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Firm_Price__c.field-meta.xml
<CustomField>
    <fullName>Firm_Price__c</fullName>
    <label>Firm Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>