force-app/main/default/objects/SPA_Request_Line_Item__c/fields/FixBookMultiplier__c.field-meta.xml
<CustomField>
    <fullName>FixBookMultiplier__c</fullName>
    <description>Fix Book Multiplier set by Price Organization if Link Category condition is not satisfied</description>
    <label>Fix Book Multiplier</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>