force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <label>Item Code</label>
    <length>35</length>
    <type>Text</type>
</CustomField>