force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ItemCodeID__c.field-meta.xml
<CustomField>
    <fullName>ItemCodeID__c</fullName>
    <description>Salesforce Internal Unique ID for Item Code value</description>
    <label>Item Code ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>