force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ItemDiscountSchedule__c.field-meta.xml
<CustomField>
    <fullName>ItemDiscountSchedule__c</fullName>
    <description>Item Code &apos;I&apos; Product Discount Schedule value</description>
    <label>Item Discount Schedule</label>
    <length>10</length>
    <type>Text</type>
</CustomField>