force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ItemManufacturingLocation__c.field-meta.xml
<CustomField>
    <fullName>ItemManufacturingLocation__c</fullName>
    <description>Item Code &apos;I&apos; Manufacturing Location value</description>
    <label>Item Manufacturing Location</label>
    <length>5</length>
    <type>Text</type>
</CustomField>