force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ItemPDCat__c.field-meta.xml
<CustomField>
    <fullName>ItemPDCat__c</fullName>
    <description>Item Code &apos;I&apos; Price Determination Category Value</description>
    <label>Item PDCat</label>
    <length>10</length>
    <type>Text</type>
</CustomField>