force-app/main/default/objects/SPA_Request_Line_Item__c/fields/KpiException__c.field-meta.xml
<CustomField>
    <fullName>KpiException__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine if a Vistex Best Price Exception has been violated on a SPA request line item</description>
    <label>KPI Exception</label>
    <type>Checkbox</type>
</CustomField>