force-app/main/default/objects/SPA_Request_Line_Item__c/fields/KpiExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>KpiExceptionMessage__c</fullName>
    <description>Business message shown to user indicating a line item that contains a best price exception.</description>
    <label>KPI Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>