force-app/main/default/objects/SPA_Request_Line_Item__c/fields/KpiExceptionMessageConflict__c.field-meta.xml
<CustomField>
    <fullName>KpiExceptionMessageConflict__c</fullName>
    <description>Business message shown to user indicating a line item that a price conflict with a direct account (i/e/ indirect can purchase item across multiple diret accounts.  Value will show if rule is violated.</description>
    <label>KPI Exception Message Conflict</label>
    <length>80</length>
    <type>Text</type>
</CustomField>