force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Last12MonthSalesQty__c.field-meta.xml
<CustomField>
    <fullName>Last12MonthSalesQty__c</fullName>
    <description>Last 12 Months of Sales Qty for the Special Price Agreement associated with the SPA Request</description>
    <label>Last 12 Month Sales Qty</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>