force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Last12MonthSalesRevenue__c.field-meta.xml
<CustomField>
    <fullName>Last12MonthSalesRevenue__c</fullName>
    <description>Last 12 Months Revenue of Sales for the Special Price Agreement associated with the SPA Request</description>
    <label>Last 12 Month Sales Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>