force-app/main/default/objects/SPA_Request_Line_Item__c/fields/NoChangeInBenefits__c.field-meta.xml
<CustomField>
    <fullName>NoChangeInBenefits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check whether user has requested for change in prices for the products on the spa request</description>
    <label>No Change In Benefits</label>
    <type>Checkbox</type>
</CustomField>