force-app/main/default/objects/SPA_Request_Line_Item__c/fields/PcalRequest__c.field-meta.xml
<CustomField>
    <fullName>PcalRequest__c</fullName>
    <label>Pcal Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>