force-app/main/default/objects/SPA_Request_Line_Item__c/fields/PcalResponse__c.field-meta.xml
<CustomField>
    <fullName>PcalResponse__c</fullName>
    <label>Pcal Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>