force-app/main/default/objects/SPA_Request_Line_Item__c/fields/PcalReturnCode__c.field-meta.xml
<CustomField>
    <fullName>PcalReturnCode__c</fullName>
    <label>Pcal Return Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>