force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Price_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Price_Indicator__c</fullName>
    <description>API Name is being passed to ERP(Q2C)</description>
    <label>Price Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Category (PDCAT)</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Catalog Item</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Discount Schedule</label>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>