force-app/main/default/objects/SPA_Request_Line_Item__c/fields/PriceActionEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>PriceActionEffectiveDate__c</fullName>
    <description>Current Effective Date on Agreement at time of price action creation</description>
    <label>Price Action Effective Date</label>
    <type>Date</type>
</CustomField>