force-app/main/default/objects/SPA_Request_Line_Item__c/fields/PriceActionNetMultiplierRebate__c.field-meta.xml
<CustomField>
    <fullName>PriceActionNetMultiplierRebate__c</fullName>
    <description>Current Multiplier on Agreement at time of price action creation</description>
    <label>Price Action Net Multiplier Rebate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>