force-app/main/default/objects/SPA_Request_Line_Item__c/fields/PriceActionNetPriceRebate__c.field-meta.xml
<CustomField>
    <fullName>PriceActionNetPriceRebate__c</fullName>
    <description>Current Net Price on Agreement at time of price action creation</description>
    <label>Price Action Net Price Rebate</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>