force-app/main/default/objects/SPA_Request_Line_Item__c/fields/PricebookId__c.field-meta.xml
<CustomField>
    <fullName>PricebookId__c</fullName>
    <label>Pricebook Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>