force-app/main/default/objects/SPA_Request_Line_Item__c/fields/PriceDetermination__c.field-meta.xml
<CustomField>
    <fullName>PriceDetermination__c</fullName>
    <label>Price Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>