force-app/main/default/objects/SPA_Request_Line_Item__c/fields/PriceHierarchy1__c.field-meta.xml
<CustomField>
    <fullName>PriceHierarchy1__c</fullName>
    <description>SAP Price Hierarchy Level 1</description>
    <label>Price Hierarchy 1</label>
    <length>4</length>
    <type>Text</type>
</CustomField>