force-app/main/default/objects/SPA_Request_Line_Item__c/fields/ProfileMultiplier__c.field-meta.xml
<CustomField>
    <fullName>ProfileMultiplier__c</fullName>
    <label>Profile Multiplier</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>