force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Requested_Committed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Requested_Committed_Quantity__c</fullName>
    <label>Requested Committed Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>