force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Requested_Committed_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Requested_Committed_Revenue__c</fullName>
    <label>Requested Committed Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>