force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Requested_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Expiration_Date__c</fullName>
    <label>Requested Expiration Date</label>
    <type>Date</type>
</CustomField>