force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Requested_Net_Multiplier_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Requested_Net_Multiplier_Rebate__c</fullName>
    <label>Requested Net Multiplier Rebate</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>