force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Requested_Net_Price_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Requested_Net_Price_Rebate__c</fullName>
    <label>Requested Net Price Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>