force-app/main/default/objects/SPA_Request_Line_Item__c/fields/SPA_Request__c.field-meta.xml
<CustomField>
    <fullName>SPA_Request__c</fullName>
    <label>SPA Request</label>
    <referenceTo>SPA_Request__c</referenceTo>
    <relationshipLabel>SPA Request Line Item</relationshipLabel>
    <relationshipName>SPA_Request_Line_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>