force-app/main/default/objects/SPA_Request_Line_Item__c/fields/SPARebateMultiplier__c.field-meta.xml
<CustomField>
    <fullName>SPARebateMultiplier__c</fullName>
    <description>Rebate Multiplier for the existing Best Price Hierarchy Scenario</description>
    <label>SPA Rebate Multiplier</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>