force-app/main/default/objects/SPA_Request_Line_Item__c/fields/SubItemPDCat__c.field-meta.xml
<CustomField>
    <fullName>SubItemPDCat__c</fullName>
    <description>Price Determination Sub Category (Used by Canada Only).  Price Hierarchy Level 4.</description>
    <label>Subcategory Item PDCat</label>
    <length>1</length>
    <type>Text</type>
</CustomField>