force-app/main/default/objects/SPA_Request_Line_Item__c/fields/Unit_Profile_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Profile_Price__c</fullName>
    <label>Unit Profile Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>