force-app/main/default/objects/SPA_Request_Line_Item__c/fields/UxPriceStatus__c.field-meta.xml
<CustomField>
    <fullName>UxPriceStatus__c</fullName>
    <label>UX Price Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>