force-app/main/default/objects/SPA_Request_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Id__c</columns>
    <columns>Is_Deleted__c</columns>
    <columns>Name__c</columns>
    <columns>Currency_Iso_Code__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Created_By_Id__c</columns>
    <columns>Last_Modified_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>